<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/toolbar_title_text"
        app:titleTextColor="#FFFFFF"
        android:elevation="4dp"
        android:background="@color/palm_sdk_colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="56dp">
    </android.support.v7.widget.Toolbar>


    <FrameLayout
        android:id="@+id/lockScreenEnabledLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize">

        <TextView
            android:layout_marginLeft="@dimen/activityMargin"
            android:text="@string/lockscreen"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/switchEnabled"
            android:checked="true"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/activityMargin"
            android:text="Enabled"
            android:switchPadding="8dp"
            android:textColor="@color/secondary_grey"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/leftPalmLayout"
        android:clickable="true"
        android:layout_width="match_parent" android:focusable="true" 
        android:layout_height="@dimen/actionBarSize">

        <TextView
            android:layout_marginLeft="@dimen/activityMargin"
            android:text="@string/left_palm_title"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/leftPalmAction"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <FrameLayout
        android:id="@+id/rightPalmLayout"
        android:clickable="true"
        android:layout_width="match_parent" android:focusable="true" 
        android:layout_height="@dimen/actionBarSize">

        <TextView
            android:layout_marginLeft="@dimen/activityMargin"
            android:text="@string/right_palm_title"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/rightPalmAction"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <View
        android:background="@color/gray_light"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <View
        android:layout_weight="1"
        android:background="#EEEEEE"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#EEEEEE">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/doneButton"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:text="@string/done"
            app:backgroundTint="@color/gray_light"
            android:stateListAnimator="@null"
            android:layout_margin="@dimen/activityMargin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </FrameLayout>

</LinearLayout>