<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.zwsb.palmsdk"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:elevation="8dp">

            <ImageView
                android:id="@+id/closeButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:clickable="true"
                android:focusable="true" android:contentDescription="TODO" android:scaleType="center"
                android:src="@drawable/ic_close_white_24dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/left_palm_title"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/nextButton"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_gravity="right"
                android:clickable="true"
                android:focusable="true" android:contentDescription="TODO" android:scaleType="center"
                android:src="@drawable/ic_arrow_forward_white_24dp"
                android:visibility="gone" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/palmImageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                app:civ_border_color="@color/fistColor"
                app:civ_border_width="8dp" />

            <TextView
                android:id="@+id/click_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/click_done"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/activityMargin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:background="@color/red_for_clear_button_color"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/retake_palm"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/bigNextButton"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:background="@color/orange"
                    android:gravity="center"
                    android:stateListAnimator="@null"
                    android:text="@string/done"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>