<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/scanInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/infoLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/palmImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:contentDescription="TODO" android:src="@drawable/left_palm" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/spread_fingers_hint"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:text="@string/show_palm_hint"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/circle_hint"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/testCapTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_palm_hint_postfix"
            android:textColor="@color/black"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:clickable="true"
            android:focusable="true" android:contentDescription="TODO" android:scaleType="center"
            android:src="@drawable/ic_close_black_24dp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/scanRootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextureView
            android:id="@+id/surfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.zwsb.palmsdk.customViews.ScanGradientView
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.zwsb.palmsdk.customViews.GradientView
            android:id="@+id/gradientView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bottom_preview_gradient" />

        <com.zwsb.palmsdk.customViews.ScanCircleGradientView
            android:id="@+id/circleGradientView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0" />

        <FrameLayout
            android:id="@+id/scanLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.zwsb.palmsdk.customViews.ScanView
                android:id="@+id/scanView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.zwsb.palmsdk.customViews.CircleAnimationView
                android:id="@+id/circleAnimationView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="42sp" />

            <TextView
                android:id="@+id/palmTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:textColor="@color/blue"
                android:textSize="22sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/pinLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0">

            <ImageView
                android:id="@+id/palmButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="@dimen/activityMargin"
                android:clickable="true"
                android:focusable="true" android:contentDescription="TODO" android:scaleType="center"
                android:src="@drawable/palm_icon"
                android:visibility="gone" />
        </FrameLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:contentDescription="TODO" android:scaleType="center"
            android:src="@drawable/logo_mini_color"
            android:visibility="gone" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_front"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/orange"
                android:gravity="center"
                android:padding="@dimen/margin05"
                android:text="Front Camera"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent_color"
                android:gravity="center"
                android:padding="@dimen/margin05"
                android:text="Back Camera"
                android:textColor="@color/black" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>